--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -74,13 +74,7 @@ Under the assumption that $\nexists\  i \  s.t. \ t^i = 0$, the algorithm would 
 
 \begin{equation} \label{eq:logit}
 h(z)  = \frac{e^{z}}{1 + e^{z}} = \frac{1}{1 + e^{-z}}  \\
-
-and \  H(z) \approx \frac{1}{2} + \frac{1}{2}tanh(kz) = \frac{1}{1+e^{kz}}  
-
-
-%P(x,y)dxdy \left(f \right)
-%= \Expect_{\textbf{x}} \left[ \Expect_{\textbf{y}|\textbf{x}} \left[  \left( \textbf{y} - f(\textbf{x})  \right)^2 \right]  \right]
-%\sum_{i=0}^{\infty} a_i x^i
+and \  H(z) \approx \frac{1}{2} + \frac{1}{2}tanh(z) = \frac{1}{1+e^{-z}}  
 \end{equation}
 
 
