--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -74,7 +74,7 @@ Under the assumption that $\nexists\  i \  s.t. \ t^i = 0$, the algorithm would 
 
 \begin{equation} \label{eq:logit}
 h(z)  = \frac{e^{z}}{1 + e^{z}} = \frac{1}{1 + e^{-z}}  \\
-and \  H(z) \approx \frac{1}{2} + \frac{1}{2}tanh(z) = \frac{1}{1+e^{-z}}  
+and \  H(z) = lim_{k \to \infty} \frac{1}{2} + \frac{1}{2}tanh(kz) = lim_{k \to \infty} \frac{1}{1+e^{-kz}}  
 \end{equation}
 
 
