--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -90,14 +90,6 @@ A naive approach to find the parameters in our problem would be to minimize the 
 
 \begin{equation} \label{eq:rss}
 RSS(\theta_0,..,\theta_p)  = \sum_{i=1}^n [y^i - \hat{y}^i]^2  \\
-=  \sum_{i=1}^n [y^i - f( \theta \cdot x^i)]^2
-
-%P(x,y)dxdy \left(f \right)
-%= \Expect_{\textbf{x}} \left[ \Expect_{\textbf{y}|\textbf{x}} \left[  \left( \textbf{y} - f(\textbf{x})  \right)^2 \right]  \right]
-%\sum_{i=0}^{\infty} a_i x^i
+=  \sum_{i=1}^n [y^i - h( \theta \cdot x^i)]^2
 \end{equation}
-
-
-
-
 
