--- a/subsubsection_A_working_example_For__.tex
+++ b/subsubsection_A_working_example_For__.tex
@@ -97,8 +97,7 @@ If we assume that $y  =  f(x)  +  \epsilon $ is a good relationship for our data
 %, and can be decomposed into two types of errors
 
 \[
-    Err_train(\theta) \approx \frac{1}{n} \Expect_{ \mathrm{T}}[(\textbf{y} - h(\textbf{x} \cdot \theta) )^2]
-    = 
+    Err_{train}(\theta) \approx \frac{1}{n} \Expect_{ \mathrm{T}}[(\textbf{y} - h(\textbf{x} \cdot \theta) )^2]
     \]
     
     
