--- a/header.tex
+++ b/header.tex
@@ -12,6 +12,7 @@
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calE}{\mathcal{E}}
 \newcommand{\calL}{\mathcal{L}}
+\newcommand{\calT}{\mathcal{T}}
 
 %comandos de operadores de esperanza, varianza etc.
 \newcommand{\Expect}{{\rm I\kern-.3em E}}
