--- a/Expect_calG_calN_calE_calL__.tex
+++ b/Expect_calG_calN_calE_calL__.tex
@@ -32,7 +32,12 @@ EPE\left(f \right) = \int [y - f(x)]^2 P(x,y)dxdy
 
 %\textit{The generalization performance of a learning method relates to its prediction capability on independent test data. Assessment of this performance is extremely important in practice, since it guides the choice of learning method or model, and gives us a measure of the quality of the ultimately chosen model.}
 
-
+\textbf{Overfitting}: 
+It is said that a learner overfits a training set \mathcal{T} if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ such that
+\begin{equation} \label{eq:overfitting}
+Error_{train}(\hat{\theta}) < Error_{train}(\theta^*} \  and \ Error_{test}(\theta^*) < Error_{test}(\hat{\theta})   
+%\sum_{i=0}^{\infty} a_i x^i
+\end{equation}
 
 \textbf{Cross Validation}:  
 \textit{simplest and most widely used method... This method directly estimates the expected extra-sample error
