--- a/Expect_calG_calN_calE_calL__.tex
+++ b/Expect_calG_calN_calE_calL__.tex
@@ -35,7 +35,7 @@ EPE\left(f \right) = \int [y - f(x)]^2 P(x,y)dxdy
 \textbf{Overfitting}: 
 It is said that a learner overfits a training set \mathcal{T} if it fits parameter $\hat{\theta}$ while there $\exists \theta^*$ such that
 \begin{equation} \label{eq:overfitting}
-Error_{train}(\hat{\theta}) < Error_{train}(\theta^*} \  and \ Error_{test}(\theta^*) < Error_{test}(\hat{\theta})   
+Error_{train}(\hat{\theta}) < Error_{train}(\theta^*) \  and \ Error_{test}(\theta^*) < Error_{test}(\hat{\theta})   
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
 
