--- a/section_Gradient_Boosting_Variation_subection__.tex
+++ b/section_Gradient_Boosting_Variation_subection__.tex
@@ -4,16 +4,24 @@
 
 $\Theta$
 
+The objective function differences minimization objectives. 
+
+Predictive power: how well the algorithm fits the data used for training and, hopefully, the \textit{true} underlying distribution
+
++ Regularization, favors parsimonious models. This is because all models approximate natural/processes to some degree, so if a simpler model can be used with the same predictive power, then this model should be used.  
+
 \begin{equation} \label{eq:objFunction}
 Obj(\Theta) \ = \ L(\Theta) + R(\Theta)
 \\
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
 
-
-In Argentina vector control campaigns have been ongoing for more than 50 years as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines~\cite{OPS2014mapa}. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas. The ecoregion as of today is hyperendemic for the disease.
-
-
+When building a model of ensemble trees, a higher model will be learning on other \textit{weaker} decision trees. If $\calG$ is a set of tree models, then 
+\[
+    %\begin{equation}
+    y = \sum_k f_k(x) , \ f \in \calG 
+    %\end{equation}
+    \]
 
 \subection{sklearn}
 
