--- a/section_Gradient_Boosting_Variation_subection__.tex
+++ b/section_Gradient_Boosting_Variation_subection__.tex
@@ -17,11 +17,7 @@ Obj(\Theta) \ = \ L(\Theta) + R(\Theta)
 \end{equation}
 
 When building a model of ensemble trees, a higher model will be learning on other \textit{weaker} decision trees. If $\calG$ is a set of tree models, then 
-\[
-    %\begin{equation}
-    y = \sum_k f_k(x) , \ f \in \calG 
-    %\end{equation}
-    \]
+\[    y = \sum_k f_k(x) , \ f \in \calG \]
 
 \subection{sklearn}
 
