--- a/section_Gradient_Boosting_Variation_subection__.tex
+++ b/section_Gradient_Boosting_Variation_subection__.tex
@@ -16,8 +16,8 @@ Obj(\Theta) \ = \ L(\Theta) + R(\Theta)
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
 
-When building a model of ensemble trees, a higher model will be learning on other \textit{weaker} decision trees. If $\calG$ is a set of tree models, then 
-\[    y = \sum_k f_k(x) , \ f \in \calG \]
+When building a model of ensemble trees, a higher model will be learning on other \textit{weaker} decision trees. If $Tr$ is a set of tree models, then 
+\[    y = \sum_k f_k(x) , \ f_k \in Tr \forall k \]
 
 \subection{sklearn}
 
