--- a/subsubsection_A_working_example_For__.tex
+++ b/subsubsection_A_working_example_For__.tex
@@ -70,6 +70,7 @@ Then if we were to use the heavyside step function $h(z)$  where
     %\end{equation}
     \]
 
+A logical goal for the model would be to maximize $P(\textbf{y^i} = y^i | \textbf{x^i} = x) \ \forall i$
 Under the assumption that $\nexists\  i \  s.t. \ t^i = 0$, the algorithm would then correctly classify all samples to their targets. This situation is hardly the case, so a different approach is taken. A more tractable function for this task is the logistic function which is an approximation of the heavyside step function. Here  
 
 \begin{equation} \label{eq:logit}
