--- a/section_Gradient_Boosting_Variation_subection__.tex
+++ b/section_Gradient_Boosting_Variation_subection__.tex
@@ -30,7 +30,7 @@ At a higher level we would have that $\Theta$ is a parameter encoding lower tree
 
 A first take on this optimization problem goes along the way of greedy algorithms. One tree is fit at a time and new trees are then successively added in later steps to improve on previous trees' errors.
 
-Let ${\hat{y}^i}_{t}$ be the predictive target at step $t$ of the algorithm, $t \in {0,..,T}$. 
+Let $\hat{y}_t^i$ be the predictive target at step $t$ of the algorithm, $t \in {0,..,T}$. 
 
 aggregating 
 %$Obj
